# rustic

./: .editorconfig  .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-release.sh  config.yaml  silex.code-workspace
config/lexic/: portail.yaml
config/lexic/admin/config/: admin.sql  application.yaml  groups.yaml  users.yaml  users_groups.yaml
config/lexic/books/config/: application.yaml  books.sql  books.yaml
config/lexic/chinook/: chinook_ddl.sql  chinook_drop.sql  chinook_genres_artists_albums.sql  chinook_songs.sql
data/app/: portail.yaml
data/app/admin/: beedule-backup.sql
doc/: memo.md  rustic.uxf  rustix.uxf  silex.uxf
docker/: Dockerfile  build.sh  docker-compose.yaml
production/: build.sh
src/: dico.rs  main.rs  middle.rs  models.rs
src/cruder/: delete.rs  insert.rs  list.rs  mod.rs  read.rs  record.rs  sql_crud.rs  sql_utils.rs  sqler.rs  update.rs
src/dx/: dx_application.rs  dx_portail.rs  dx_utils.rs  mod.rs  view.rs
src/lexic/: lex_application.rs  lex_lexic.rs  lex_portail.rs  lex_table.rs  lex_utils.rs  lx_application.rs  lx_portail.rs  mod.rs
src/lexicer/: lex_application.rs  lex_lexic.rs  lex_portail.rs  lex_table.rs  lex_utils.rs  mod.rs
src/middler/: flash.rs  history.rs  mid_session.rs  mod.rs  tera_filters.rs
src/router/: back.rs  go_back.rs  mod.rs  route_add.rs  route_add_insert.rs  route_add_post.rs  route_application.rs  route_delete_post.rs  route_edit.rs  route_edit_post.rs  route_edit_update.rs  route_filter.rs  route_form.rs  route_lexic.rs  route_list.rs  route_login.rs  route_portail.rs  route_search.rs  route_sort.rs  route_update.rs  route_view.rs  rt_application.rs  rt_lexic.rs  rt_list.rs  rt_portail.rs  view_table.rs
src/routic/: mod.rs  rt_application.rs  rt_lexic.rs  rt_list.rs  rt_login.rs  rt_portail.rs  rx_login.rs  rx_portail.rs  tweet.rs
src/rx/: dico.rs  mod.rs  rx_portail.rs  tweet.rs
src/servic/: mod.rs  sr_data.rs  sr_redirect.rs
src/service/: mod.rs  srv_session.rs
src/sqlic/: mod.rs  sql_crud.rs  sql_utils.rs
static/: manifest.pwa.json
static/css/: silex.css
static/eddy/: eddy.js  keyword.js
static/js/: silex.js
templates/: hello.html  inc_menu.html  inc_view_footer.html  index.html  macro_card_elements.html  macro_edit_elements.html  macro_form_elements.html  macro_table.html  tpl_add.html  tpl_application.html  tpl_base.html  tpl_delete.html  tpl_edit.html  tpl_edit_elements.html  tpl_flash.html  tpl_form.html  tpl_form_elements.html  tpl_list.html  tpl_list_elements.html  tpl_login.html  tpl_macros.html  tpl_menu.html  tpl_portail.html  tpl_table.html  tpl_table_elements.html  tpl_view.html  tpl_view_card.html  tpl_view_elements.html  tpl_view_table.html  tx_portail.html  x_incl_table_elements.html
(+22 files in other folders)
