[package]
name = "silex"
version = "0.12.0"
edition = "2021"
authors = ["Philippe Billerot"]
documentation = ""
homepage = ""
repository = "https://github.com/pbillerot/silex"

[dependencies]
# actix-csrf = "0.7.0"
# actix-csrf = {path = "./actix_csrf"}
actix-session = { version = "0.7.2", features = ["cookie-session"] }
# actix-settings = "0.6.0"
actix-web = { version = "4", default-features = false, features = ["cookies", "secure-cookies", "macros"] }
actix-web-lab = "0.19.1"
# actix-web-flash-messages = { version = "0.4.2", features = ["sessions"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.17.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures-util = "0.3.28"
log = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9"
sqlx = { version = "0.7.1", features = ["runtime-async-std", "postgres", "sqlite", "uuid", "chrono", "bigdecimal"] }
tera = "1.19.0"
tokio = { version = "1.29.1", features = ["full"] }
